--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,35 +1,31 @@
 # yaml-language-server: $schema=https://json.schemastore.org/dependabot-2.0.json
 version: 2
 updates:
-    - directory: /
-      package-ecosystem: github-actions
-      schedule:
-          interval: daily
-          timezone: Europe/Copenhagen
-          time: "12:00"
-      open-pull-requests-limit: 25
-      labels: []
-    - directory: /doc
-      package-ecosystem: npm
-      schedule:
-          interval: daily
-          timezone: Europe/Copenhagen
-          time: "12:00"
-      open-pull-requests-limit: 25
-      labels: []
-    - directory: /src/extensions/vscode
-      package-ecosystem: npm
-      schedule:
-          interval: daily
-          timezone: Europe/Copenhagen
-          time: "12:00"
-      open-pull-requests-limit: 25
-      labels: []
-    - directory: /
-      package-ecosystem: nuget
-      schedule:
-          interval: daily
-          timezone: Europe/Copenhagen
-          time: "12:00"
-      open-pull-requests-limit: 25
-      labels: []
+  - package-ecosystem: github-actions
+    directories:
+      - /
+    schedule:
+      interval: daily
+      timezone: Europe/Copenhagen
+      time: "12:00"
+    open-pull-requests-limit: 25
+    labels: []
+  - package-ecosystem: npm
+    directories:
+      - /doc
+      - /src/extensions/vscode
+    schedule:
+      interval: daily
+      timezone: Europe/Copenhagen
+      time: "12:00"
+    open-pull-requests-limit: 25
+    labels: []
+  - package-ecosystem: nuget
+    directories:
+      - /
+    schedule:
+      interval: daily
+      timezone: Europe/Copenhagen
+      time: "12:00"
+    open-pull-requests-limit: 25
+    labels: []
